--- a/taxTelecomTasks.WebApi/appsettings.json
+++ b/taxTelecomTasks.WebApi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RandomApi": "http://www.randomnumberapi.com/api/v1.0/",
+  "Settings": {
+    "Blacklist": [
+      "abc",
+      "ab",
+      "edf"
+    ]
+  },
   "AllowedHosts": "*"
 }
