--- a/taxTelecomTasks.WebApi/taxTelecomTasks.WebApi.csproj
+++ b/taxTelecomTasks.WebApi/taxTelecomTasks.WebApi.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\taxTelecomTasks.Core\taxTelecomTasks.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Home\" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
